docs/7.52/md/abenst_option.md
---
title: "ST - option, Mapping Rules"
description: |
  Syntax ... option='...,...' Effect The attribute option can be used to override the associated mapping rule from and to asXML(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xslt_asxml.htm) for certain data types (the rule is defined by the data type). The possible options can
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_option.htm"
abapFile: "abenst_option.htm"
keywords: ["do", "if", "data", "types", "abenst", "option"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml.htm) →  [Transformations for XML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xml_trafos.htm) →  [ST - Simple Transformations](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_st.htm) →  [ST - Serialization and Deserialization](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_serial_deserial.htm) →  [ST - Transformation of ABAP Values](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_abap_values.htm) →  [ST - tt:value, Elementary Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_tt_value_elementary.htm) → 

ST - option, Mapping Rules

Syntax

... option="...,..."

Effect

The attribute option can be used to override the associated mapping rule from and to [asXML](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_xslt_asxml.htm) for certain data types (the rule is defined by the data type). The possible options can be specified as the content of the attribute, in a list separated by commas. Any options that are mutually exclusive produced a syntax check warning.

-   [Mapping Rules for Elementary Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_option_format.htm)

-   [Mapping Rules for XML Fragments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_option_xsdany.htm)

Continue
[ST - option, Mapping Rules for Elementary Types](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_option_format.htm)
[ST - option, Mapping Rules for XML Fragments](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenst_option_xsdany.htm)