docs/7.57/md/abenst_option.md
---
title: "ST - option, Mapping Rules"
description: |
  Syntax ... option='...,...' Effect The attribute option can be used to override the associated mapping rule, which depends on the data type, from and to asXML(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xslt_asxml.htm) for certain data types. The possible options can be spe
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_option.htm"
abapFile: "abenst_option.htm"
keywords: ["do", "if", "data", "types", "abenst", "option"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Data Interfaces and Communication Interfaces](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_communication.htm) →  [ABAP and XML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml.htm) →  [XML - Transformations](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xml_trafos.htm) →  [Simple Transformations (ST)](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_st.htm) →  [ST - Serialization and Deserialization](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_serial_deserial.htm) →  [ST - Transformation of ABAP Values](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_abap_values.htm) →  [ST - tt:value, Elementary Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_tt_value_elementary.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: ST - option, Mapping Rules, ABENST_OPTION, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D
%0ASuggestion for improvement:)

ST - option, Mapping Rules

Syntax

... option="...,..."

Effect

The attribute option can be used to override the associated mapping rule, which depends on the data type, from and to [asXML](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_xslt_asxml.htm) for certain data types. The possible options can be specified as the content of the attribute, in a list separated by commas. Any options that are mutually exclusive produce a syntax check warning.

-   [Mapping Rules for Elementary Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_option_format.htm)
-   [Mapping Rules for XML Fragments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_option_xsdany.htm)

Continue
[ST - option, Mapping Rules for Elementary Types](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_option_format.htm)
[ST - option, Mapping Rules for XML Fragments](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenst_option_xsdany.htm)